complete the overall flow of app
